--- a/src/components/game/game-style.css
+++ b/src/components/game/game-style.css
@@ -1,5 +1,15 @@
 .snake-header {
-    background-color: #49752b;
-    color: #fff;
+    /*background-color: #49752b;*/
+    color: #E8E9EB;
     width: 30%;
+}
+
+.field-row-container {
+    height: 30px;
+}
+
+.score-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
