--- a/src/components/modal/modal-style.css
+++ b/src/components/modal/modal-style.css
@@ -13,12 +13,12 @@
 .button-wrapper {
     background-color: #E4B363;
     color: #E8E9EB;
-    /*padding: 5px 10px;*/
-    /*border-radius: 10px;*/
-    /*width: 35%;*/
-    /*display: flex;*/
-    /*justify-content: center;*/
-    /*margin: 0 auto;*/
+    padding: 8px 10px;
+    border-radius: 10px;
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
 }
 
 .button-game-again {
